Add Values section to CV

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,6 +1,7 @@
 ---
 const { name } = Astro.props;
 const links = [
+  ["Values", "#values"],
   ["Experience", "#experience"],
   ["iOS", "#ios"],
   ["Education", "#education"],
